Fix div-3 on small display overflow partially

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -71,7 +71,6 @@ body {
   height: 60vh;
   background-color: var(--primary-color);
 }
-
 .div-3 {
   margin-top: 55vh;
   width: 100px;
@@ -106,15 +105,25 @@ body {
 
 @media screen and (max-width: 600px) {
   #home {
-    height: 120vh;
+    height: 110vh;
   }
   .div-2 {
     height: 40vh;
   }
   .div-3 {
-    margin-top: 75vh;
+    height: 100vh;
+    margin: 10px;
+    margin-top: 60vh;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    transform: none;
+    overflow:hidden;
+  }
+  .div-3 img {
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(10%); /* Center align horizontally */
+    margin: 4px;
   }
   .div-4 h2 {
     text-align: center;
